# 1lab

./: .gitattributes  .gitignore  .gitlab-ci.yml  .macros  1lab.agda-lib  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Shakefile.hs  _typos.toml  cabal.project  default.nix  docker.nix  package-lock.json  package.json  shell.nix  stack.yaml  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: buid.yml  build.yml  preview.yml
.gitlab/merge_request_templates/: MR.md
src/: Authors.lagda.md  Borceux.lagda.md  Category.lagda.md  Elephant.lagda.md  HoTT.lagda.md  Mikan.lagda.md  Schreiber.lagda.md  autorefs.txt  bibliography.bibtex  index.lagda.md  preamble.tex
src/1Lab/: Biimp.lagda.md  Classical.lagda.md  Connectedness.lagda.md  Equiv.lagda.md  Extensionality.agda  HLevel.lagda.md  Inductive.agda  Inversion.agda  Membership.agda  Path.lagda.md  Prelude.agda  Reflection.agda  Reflection.lagda.md  Resizing.lagda.md  Rewrite.agda  Truncation.lagda.md  Type.lagda.md  Underlying.agda  Univalence.lagda.md  index.lagda.md  intro.lagda.md
src/1Lab/Counterexamples/: GlobalChoice.lagda.md  IsIso.lagda.md  Isovalence.lagda.md  Russell.lagda.md  Sigma.lagda.md
src/1Lab/Data/: Bool.lagda.md  Dec.lagda.md  Delooping.lagda.md  Int.lagda.md  List.lagda.md  Nat.lagda.md  Sum.lagda.md  Truncation.lagda.md
src/1Lab/Equiv/: Biinv.lagda.md  Embedding.lagda.md  Fibrewise.lagda.md  FromPath.lagda.md  HalfAdjoint.lagda.md  Pointed.agda
src/1Lab/Function/: Antiinjection.lagda.md  Antisurjection.lagda.md  Embedding.lagda.md  Fibrewise.lagda.md  Reasoning.lagda.md  Surjection.lagda.md
src/1Lab/HIT/: S1.lagda.md  Sinfty.lagda.md  Sphere.lagda.md  Suspension.lagda.md  Torus.lagda.md  Truncation.lagda.md
src/1Lab/HLevel/: Auto.agda  Closure.lagda.md  Retracts.lagda.md  Sets.lagda.md  Universe.lagda.md
src/1Lab/Path/: Cartesian.lagda.md  Groupoid.lagda.md  IdentitySystem.lagda.md  Partial.lagda.md  Reasoning.lagda.md
src/1Lab/Prim/: Extension.lagda.md  HCompU.lagda.md  Interval.lagda.md  Kan.lagda.md  Literals.lagda.md  Monad.lagda.md  Numerals.lagda.md  Type.lagda.md
src/1Lab/Reflection/: Copattern.agda  HLevel.agda  Induction.agda  List.lagda.md  Marker.agda  Record.agda  Regularity.agda  Signature.agda  Solver.agda  Subst.agda  Univalence.agda  Variables.agda  Wait.agda
src/1Lab/Type/: Dec.lagda.md  (+4 more)
src/Algebra/: EckmannHilton.lagda.md  Frame.lagda.md  Group.lagda.md  Lattice.lagda.md  Magma.lagda.md  Monoid.lagda.md  Prelude.agda  Quasigroup.lagda.md  Ring.lagda.md  Semigroup.lagda.md  Semilattice.lagda.md  UnitalMagma.lagda.md
src/Cat/: Base.lagda.md  Cartesian.lagda.md  Connected.lagda.md  Displayed.lagda.md  Duality.lagda.md  Finite.lagda.md  FinitelyComplete.lagda.md  Gaunt.lagda.md  Groupoid.lagda.md  Monad.lagda.md  Morphism.lagda.md  Prelude.agda  Reasoning.lagda.md  Reflection.agda  Regular.lagda.md  Skeletal.lagda.md  Solver.lagda.md  Strict.lagda.md  Subcategory.lagda.md  Thin.lagda.md  Total.lagda.md  Univalent.lagda.md
src/Category/: Base.lagda.md  Solver.lagda.md
src/Counterexamples/: IsIso.lagda.md  Russell.lagda.md  Sigma.lagda.md
src/Data/: Bool.lagda.md  Dec.lagda.md  Fin.lagda.md  Image.lagda.md  Int.lagda.md  Irr.lagda.md  List.lagda.md  Map.lagda.md  Maybe.lagda.md  Nat.lagda.md  Power.lagda.md  Sum.lagda.md  W.lagda.md
src/Homotopy/: Base.lagda.md  Conjugation.lagda.md  Connectedness.lagda.md  HSpace.lagda.md  HStructure.lagda.md  Join.lagda.md  Loopspace.lagda.md  Pushout.lagda.md  Spectrum.lagda.md  Truncation.lagda.md  Wedge.lagda.md
src/IsbellDuality/: IsbellDuality.lagda.md
src/Meta/: Alt.lagda.md  Append.lagda.md  Bind.lagda.md  Brackets.lagda.md  Foldable.lagda.md  Idiom.lagda.md  Invariant.lagda.md  Traversable.lagda.md  Traverse.lagda.md
src/Order/: Base.lagda.md  Cat.lagda.md  DCPO.lagda.md  Diagram.md  Directed.lagda.md  Displayed.lagda.md  Filter.lagda.md  Frame.lagda.md  FullSubposet.lagda.md  Heyting.lagda.md  Lattice.lagda.md  Morphism.lagda.md  Ordinal.lagda.md  Poset.lagda.md  Proset.lagda.md  Reasoning.lagda.md  Semilattice.lagda.md  Subposet.lagda.md  Suplattice.lagda.md  Total.lagda.md  Univalent.lagda.md
src/Prim/: Extension.lagda.md  HCompU.lagda.md  Interval.lagda.md  Kan.lagda.md  Literals.lagda.md  Type.lagda.md
src/Principles/: Resizing.lagda.md
src/Realisability/: Base.lagda.md  PCA.lagda.md
src/Realizability/: PAS.lagda.md  PCA.lagda.md
src/Relation/: Order.lagda.md
src/Rewriting/: Base.lagda.md  Commute.lagda.md  Confluent.lagda.md  StronglyNormalising.lagda.md
src/SHT/: Base.lagda.md
src/Talks/: Topos2024.lagda.md
src/Theories/: Signature.lagda.md
src/Topoi/: Base.lagda.md  Reasoning.lagda.md
src/Topology/: Base.lagda.md  Cat.lagda.md  Hausdorff.lagda.md
src/wip/: untruncate.agda
support/: build-diagram.sh  check.sh  darken.tex  diagram.tex  everything.sh  get-types.py  make-site.sh  maths-filter.lua  sort-imports.hs
support/katex/: katex-worker.js
support/nix/: build-shake.nix  haskell-packages.nix  nixpkgs.nix  static-agda.nix
support/shake/: .gitignore  1lab-shake.cabal  CHANGELOG.md  LICENSE.agda  README.md  shake.cabal
support/shake/app/: Agda.hs  Definitions.hs  Discover.hs  Filter.hs  IdInfo.hs  Macros.hs  Main.hs  Timer.hs  Warning.hs  Wrapper.hs
support/shake/app/Filter/: TagSoup.hs  TagSoup.hs-boot
support/shake/app/Filter/TagSoup/: Attributes.hs  Elements.hs  TH.hs
support/shake/app/HTML/: Backend.hs  Base.hs  Emit.hs  Render.hs
support/shake/app/Shake/: AgdaCompile.hs  AgdaRefs.hs  Diagram.hs  Digest.hs  Git.hs  Highlights.hs  KaTeX.hs  LinkGraph.hs  LinkReferences.hs  Markdown.hs  Markdown.hs-boot  Modules.hs  Options.hs  Recent.hs  SearchData.hs  Utils.hs
support/shake/app/Shake/Markdown/: Filter.hs  Foresight.hs  HoTT.hs  Reader.hs
support/web/: agda-cats.scss  default.scss  depgraph.js  equations.js  highlight-hover.js  mixins.scss  search.js  template.html  template.reveal.html  unfold.js  vars.scss
(+950 files in other folders)
