cabal-version:      2.4
name:               shake
version:            0.1.0.0
author:             Amélia Liao
maintainer:         me@amelia.how

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable shake
    main-is:          Main.hs
    build-depends:
      base ^>=4.14.3.0,
      aeson,
      Agda,
      bytestring,
      containers,
      directory,
      doctemplates,
      mtl,
      pandoc,
      pandoc-types,
      process,
      SHA,
      shake,
      syb,
      tagsoup,
      text,
      uri-encode
    hs-source-dirs:   app
    other-modules: HTML.Backend, HTML.Base
    default-language: Haskell2010

executable agda-typed-html
    main-is:          Wrapper.hs
    build-depends:
      base ^>=4.14.3.0,
      aeson,
      Agda,
      bytestring,
      containers,
      directory,
      mtl,
      SHA,
      text,
      uri-encode
    hs-source-dirs:   app
    other-modules: HTML.Backend, HTML.Base
    default-language: Haskell2010
